<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>

    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="date_picker_title">Date of the Crime:</string>
    <string name="time_picker_title">Time of the Crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>

    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>

    <plurals name="subtitle_format">
        <item quantity="one">%1$s Crime</item>
        <item quantity="other">%1$s Crimes</item>
    </plurals>

    <string name="empty_view">There are no crimes. \n Click to report a new crime</string>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_suspect_call">Call the Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s.</string>
    <string name="crime_report_solved">The case is solved.</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <plurals name="crimes_selected_context">
        <item quantity="one">%1$s Crime Selected</item>
        <item quantity="other">%1$s Crimes Selected</item>
    </plurals>
    <string name="crimes_selected_context_zero">None selected</string>

</resources>
